--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -209,14 +209,14 @@
   color: white;
 }
 
-input[type="file"] {
+.register-container input[type="file"] {
   padding: 8px 0;
   border: none;
   font-size: 14px;
   color: #fff;
 }
 
-input[type="file"]::-webkit-file-upload-button {
+.register-container input[type="file"]::-webkit-file-upload-button {
   background: #ff6b00;
   color: white;
   border: none;
@@ -227,7 +227,7 @@ input[type="file"]::-webkit-file-upload-button {
   margin-right: 12px;
 }
 
-input[type="file"]::-webkit-file-upload-button:hover {
+.register-container input[type="file"]::-webkit-file-upload-button:hover {
   background: #ff7f1f;
 }
 
